# pylight

./: .gitignore  README.md  apresentacao.md  pyproject.toml
docker/: .env  Dockerfile  docker-compose.yml
docker/postgresql/postgres_data/: pg_hba.conf  postmaster.pid
docker/postgresql/postgres_data/global/: 1260  1262  2671  pg_control  pg_internal.init
docker/postgresql/postgres_data/pg_stat/: pgstat.stat
docker/postgresql/postgres_data/pg_xact/: 0000
swifit-orm/src/: codigos_teste.py  model_teste.py  postgresql_teste.py  testando.db  teste.py
swifit-orm/src/backend/: __init__.py  database_backend.py  db_base.py
swifit-orm/src/backend/MySQL/: mysql_backend.py
swifit-orm/src/backend/PostgreSQL/: postgres_backend.py
swifit-orm/src/backend/Sqlite/: sqlite_backend.py
swifit-orm/src/backends/: database_backend.py
swifit-orm/src/backends/PostgreSQL/: postgres_backend.py
swifit-orm/src/backends/Sqlite/: sqlite_backend.py
swifit-orm/src/compilers/: __init__.py  sql_compiler.py
swifit-orm/src/main/: __init__.py  main.py
swifit-orm/src/main/cache/: __init__.py  cache.py
swifit-orm/src/main/exceptions/: __init__.py  model_value_error.py  swifit_orm_exception.py
swifit-orm/src/main/filters/: __init__.py  base_filter.py
swifit-orm/src/main/model/: __init__.py  swifit_model.py
swifit-orm/src/main/session/: __init__.py  session_bind.py
swifit-orm/src/querys/: __init__.py  insert_query.py  query.py  query_builder.py  update_query.py
swifit-orm/tests/benchmarks/: benchmark.db  sqlalchemy-benchmark.py  sqlalchemy-example.py  sqlalchemy_benchmark.py
swifit-orm/tests/benchmarks/pylight/: pylight_bechmark.py  (+2 more)
swift_orm/: schema.excalidraw
(+84 files in other folders)
