[project]
name = "swift-orm"
version = "0.1.0"
description = "a swift python orm focus on performance and simplicity for my tcc at Fatec"
authors = [
    {name = "João Pedro Gomes de Souza"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
